# GameEngine

./: .gitignore  CMakeLists.txt  README.md
Editor/: CMakeLists.txt
Editor/Common/: CMakeLists.txt
Editor/Common/include/: Window.hpp
Editor/MainEditor/: CMakeLists.txt
Editor/MainEditor/src/: Core.cpp  Core.hpp  main.cpp
Editor/common/: CMakeLists.txt
Editor/common/src/: Window.cpp
Editor/imgui/: CMakeLists.txt
Editor/src/: Core.cpp  Core.hpp  build.cpp  build.hpp  main.cpp
Engine/: CMakeLists.txt
Engine/include/: Core.hpp  GEngine.hpp
Engine/include/Engine/: Camera.hpp  Scene.hpp  TexturesLoader.hpp  WinInfo.hpp
Engine/include/SDL/: Renderer.hpp  Texture.hpp
Engine/include/components/: Animation.hpp  Circle.hpp  Collider.hpp  Line.hpp  Movement.hpp  Polygon.hpp  Position.hpp  Rectangle.hpp  Relationship.hpp  Script.hpp  Sound.hpp  Sprite.hpp  Tilemap.hpp
Engine/include/engine/: Core.hpp  JSONDeserializer.hpp  Scene.hpp  SoundLoader.hpp  TransformUtils.hpp  jsonParse.hpp
Engine/include/systems/: AnimationSystem.hpp  CollisionSystem.hpp  MovementSystem.hpp  RenderSystem.hpp  TilemapSystem.hpp
Engine/include/utils/: Infos.hpp  Rect.hpp  SoundLoader.hpp  TexturesLoader.hpp  Timer.hpp  TransformUtils.hpp  Vec.hpp
Engine/src/: Core.cpp
Engine/src/Engine/: Scene.cpp  SoundLoader.cpp  TexturesLoader.cpp  TransformUtils.cpp  WinInfo.cpp
Engine/src/HUD/: Draggable.cpp  Image.cpp
Engine/src/SDL/: App.cpp  App.hpp  CMakeLists.txt  Chunk.cpp  Chunk.hpp  Renderer.cpp  Renderer.hpp  Surface.hpp  Text.cpp  Texture.hpp
Engine/src/SDL/src/: App.cpp  Chunk.cpp  Renderer.hpp  Surface.cpp  Text.hpp
Engine/src/engine/: Core.cpp  JSONDeserializer.cpp  Scene.cpp  SoundLoader.cpp  TexturesLoader.cpp  TransformUtils.cpp  WinInfo.cpp  jsonParse.cpp
Engine/src/systems/: AnimationSystem.cpp  CollisionSystem.cpp  MovementSystem.cpp  RenderSystem.cpp  TilemapSystem.cpp
Engine/src/utils/: CMakeLists.txt  Infos.cpp  Random.cpp  SoundLoader.cpp  TexturesLoader.cpp  TransformUtils.cpp
Engine/src/utils/include/: Color.hpp  Rect.hpp
GameExample/data/: game.json
GameExample/data/scenes/: entry.json
Runtime/: CMakeLists.txt  main.cpp
include/: Engine.hpp  GEngine.hpp  entt.hpp
include/SDL/: App.hpp
include/components/: Animation.hpp  Collider.hpp  Line.hpp  Position.hpp  Relationship.hpp  Sprite.hpp  Tilemap.hpp
include/items/: ItemsDefs.hpp
include/systems/: DrawMap.hpp  RenderSystem.hpp
include/utils/: Rect.hpp  TexturesLoader.hpp  TransformUtils.hpp  Vec.hpp  WinInfo.hpp
src/: Engine.cpp
src/HUD/: Button.cpp  Component.cpp  DynamicText.cpp  Layer.cpp
src/SDL/: App.cpp  Chunk.cpp  Font.cpp  Renderer.cpp  Surface.cpp  Texture.cpp
src/systems/: AnimationSystem.cpp  CollisionSystem.cpp  DrawMap.cpp  MovementSystem.cpp  RenderSystem.cpp
src/utils/: SoundLoader.cpp  Timer.cpp  TransformUtils.cpp  WinInfo.cpp
